compiler/tests/fixtures/compile_errors/numeric_capacity_mismatch/i256_neg.fe
contract Foo:
    pub def bar() -> i256:
        return i256(-57896044618658097711785492504343953926634992332820282019728792003956564819969)